syntax = "proto3";

import "protoc-gen-openapiv2/options/annotations.proto";
import "zitadel/object/v2/object.proto";
import "validate/validate.proto";

package zitadel.instance.v2beta;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/instance/v2beta;instance";

message Instance {
  string id = 1 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          example: "\"69629023906488334\""
      }
  ];
  zitadel.object.v2.Details details = 2;
  State state = 3 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          description: "current state of the instance";
      }
  ];
  string name = 4 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          example: "\"ZITADEL\"";
      }
  ];
  string version = 5 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          example: "\"1.0.0\"";
      }
  ];
  repeated Domain domains = 6;
}

enum State {
    STATE_UNSPECIFIED = 0;
    STATE_CREATING = 1;
    STATE_RUNNING = 2;
    STATE_STOPPING = 3;
    STATE_STOPPED = 4;
}

message Domain {
    zitadel.object.v2.Details details = 1;
    string domain = 2 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"zitadel.com\""
        }
    ];
    bool primary = 3;
    bool generated = 4;
}

enum FieldName {
    FIELD_NAME_UNSPECIFIED = 0;
    FIELD_NAME_ID = 1;
    FIELD_NAME_NAME = 2;
    FIELD_NAME_CREATION_DATE = 3;
}

message Query {
    oneof query {
        option (validate.required) = true;

        IdsQuery id_query = 1;
        DomainsQuery domain_query = 2;
    }
}

message IdsQuery {
    repeated string ids = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "4820840938402429";
        }
    ];
}

message DomainsQuery {
    repeated string domains = 1  [
        (validate.rules).repeated = {max_items: 20, items: {string: {min_len: 1, max_len: 100}}},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            max_items: 20,
            example: "[\"my-instace.zitadel.cloud\", \"auth.custom.com\"]";
            description: "Return the instances that have the requested domains";
        }
    ];
}